# rev0auth

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile.api  Dockerfile.frontend  Dockerfile.web  Makefile  NEXT_SESSION.md  RAPPORT_MIGRATION.md  README.md  Responsive_smartphone.md  docker-compose.yml  modification.md  notifications.md
.github/workflows/: ci.yml  deploy.yml
crates/api/: Cargo.toml
crates/api/migrations/: 0001_auth_schema.sql  0002_audit_logs_table.sql  0003_indexes_optimization.sql  0004_web_state.sql  0005_member_approved.sql  0006_invites.sql
crates/api/src/: app.rs  main.rs
crates/api/src/app/: domain.rs  handlers.rs  services.rs  tests.rs
crates/api/src/auth/: audit.rs  cookies.rs  extractor.rs  handlers.rs  jwt.rs  migrations.rs  mod.rs  models.rs  password.rs  rate_limit.rs  rbac.rs  store.rs
crates/web/: Cargo.toml
crates/web/src/: main.rs
crates/web/src/pages/: admin_login.rs  admin_login_page_styles.rs  dashboard.rs  dashboard_chat_module.rs  dashboard_donations_module.rs  dashboard_invites_module.rs  dashboard_page_assembly.rs  dashboard_page_styles.rs  dashboard_queue_module.rs  dashboard_status_module.rs  dashboard_testing_module.rs  dashboard_theme_editor_module.rs  dashboard_users_module.rs  friend.rs  friend_avatar_module.rs  friend_chat_module.rs  friend_onboarding_module.rs  friend_page_assembly.rs  friend_page_styles.rs  friend_services_module.rs  friend_status_module.rs  friend_wall_module.rs  frontend_modules.rs  frontend_theme.rs  home.rs  home_page_styles.rs  mod.rs  page_assembly.rs  portal.rs  portal_page_styles.rs  profile.rs  profile_account_deletion_module.rs  profile_admin_navigator_module.rs  profile_avatar_module.rs  profile_donations_module.rs  profile_edit_module.rs  profile_info_module.rs  profile_messages_module.rs  profile_page_assembly.rs  profile_page_styles.rs  (+5 more)
crates/web/src/styles/: mod.rs
docs/: Audit-rust.md  BASE_DOC.md  README.md  STEP_DOC.md  architecture-crates.md  architecture-web-scan-2026-04-04.md  audit-migration-svelte-2026-06-10.md  auth-009-duckdns.md  auth-009-health-checks.md  auth-009-secrets.md  auth-009-vps-setup.md  auth-012-media-install.md  caddy-duckdns-beginners.md  cheatsheet-complet.md  checklists-master.md  cicd-00-roadmap.md  cicd-01-ssh-key.md  cicd-02-vps-authorized.md  cicd-03-github-secrets.md  cicd-05-workflow.md  clean-inventory-phase1.md  connexion.md  install-to-launch.md  migration-svelte-betterauth.md  migration-tests-todo.md  public-project-handbook.md  roadmap-detailed.md  tickets-auth.md
docs/archive/2026-04-clean-2/: FunFront.md  Next-Work.md  Outtime.md  architecture.md  auth-005-report.md  (+8 more)
docs/features/: webauthn-admin.md
docs/learning/: BookOfDev.md  README.md
docs/notes/: README.md
docs/operations/: README.md  github-cheatsheet.md
docs/roadmaps/: first_stable-roadmap.md
docs/tickets/: README.md
frontend/: .env.example  .gitignore  drizzle.config.ts  package-lock.json  package.json  vite.config.ts
frontend/drizzle/: 0000_silent_shinko_yamashiro.sql
frontend/scripts/: migrate-web-users-to-ba.mjs
frontend/src/: app.css  app.d.ts  app.html  hooks.server.ts
infra/caddy/: Caddyfile.template  caddy.env.example
scripts/: admin-2fa-init.sh  admin-otp.sh  deploy-preflight.sh  devtools.sh  enroll-yubikey.sh  gen_secret.sh  install-caddy-template.sh  launch-all.sh  launch.sh  load-env.sh  project-snapshot.sh  security-audit.sh  setup-vps.sh  stop.sh  vps-save-yubikey.sh
(+118 files in other folders)
