[package]
name = "rev0auth-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
rand = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tower = "0.5"
