[package]
name = "rev0auth-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
rand = "0.8"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hmac = "0.12"
sha1 = "0.10"
data-encoding = "2.6"
